feat: レスポンスの型を定義
